[build-system]
requires = ["poetry-core>=1.5.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Digital-Rocks-Docs"
version = "0.1.0"
description = "Digital Rocks Documentation"
package = false
authors = [
  { name = "TACC COA CMD", email = "coa-cmd@tacc.utexas.edu" }
]
maintainers = [
  { name = "TACC COA CMD", email = "coa-cmd@tacc.utexas.edu" },
  { name = "TACC ACI WMA", email = "wma-portals@tacc.utexas.edu" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "mkdocs-tacc[all] (>=0.5.3,<0.6.0)",
]

[project.urls]
homepage = "https://digitalrocksportal.org"
github = "https://github.com/wesleyboar/Digital-Rocks-Docs"
